# mcp-cateye

./: .gitignore  CHANGELOG.md  PROMOTION.md  README.md  README.zh.md  pyproject.toml
mcp_cateye/: __init__.py  cli.py  scanner.py  static_analyzer.py  vuln_server.py
mcp_cateye/payloads/: __init__.py
tests/: test_integration.py  test_payloads.py  test_static_analyzer.py
