[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-cateye"
version = "1.0.1"
description = "MCP Server security scanner with fuzzing — cat's eye sees what others miss"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "cat", email = "cat@cateye.dev"}
]
keywords = ["mcp", "security", "scanner", "fuzzer", "model-context-protocol", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
mcp-cateye = "mcp_cateye.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_cateye"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
